Convert AppConfigurationProperties to be a Java Record, enable JSON logging with logging.json.enabled
The exceptions thrown by IngestService are now properly documented and PathConverter has been moved from being an internal class.